# maildropqueue

./: .gitignore  Makefile.am  README.md  configure.ac
java-pre/: Makefile.am
maildropqueue/: MailDropQueue.java.in  Makefile.am  SendMime.java  SendMime.java.in
pkg/: Doxyfile.in
pkg/rpm/: maildropqueue.spec.in
tests-autotest/: Makefile.am  testsuite.at.in
